roadmap/y.output
Terminals unused in grammar

    START
    END
    ARGS
    ARR_INDEX


Grammar

    0 $accept: code $end

    1 code: typedefSection globalDeclarations functionDefinitionList mainFunction
    2     | globalDeclarations functionDefinitionList mainFunction
    3     | globalDeclarations mainFunction
    4     | mainFunction

    5 $@1: %empty

    6 typedefSection: TYPE $@1 typedefList ENDTYPE

    7 $@2: %empty

    8 typedefSection: TYPE $@2 ENDTYPE

    9 typedefList: typedefList typeDefinition
   10            | typeDefinition

   11 typeDefinition: VAR '{' fieldList '}' ';'

   12 fieldList: fieldList fieldDeclaration
   13          | fieldDeclaration

   14 fieldDeclaration: fieldType VAR ';'

   15 fieldType: INT
   16          | STR
   17          | VAR

   18 globalDeclarations: DECL declarationList ENDDECL

   19 declarationList: declarationList declaration
   20                | declaration

   21 declaration: dataType variableList ';'

   22 dataType: INT
   23         | STR
   24         | VAR

   25 variableList: variableList ',' VAR
   26             | variableList ',' VAR '[' NUM ']'
   27             | variableList ',' VAR '(' parameterList ')'
   28             | VAR
   29             | VAR '[' NUM ']'
   30             | VAR '(' parameterList ')'

   31 functionDefinitionList: functionDefinitionList functionDefinition
   32                       | functionDefinition

   33 $@3: %empty

   34 functionDefinition: returnType VAR '(' parameterList ')' '{' localDeclarationBlock $@3 functionBody '}'

   35 returnType: INT
   36           | STR
   37           | VAR

   38 parameterList: parameterList ',' parameter
   39              | parameter
   40              | %empty

   41 parameter: dataType VAR

   42 localDeclarationBlock: DECL localDeclarationList ENDDECL
   43                      | %empty

   44 localDeclarationList: localDeclarationList localDeclaration
   45                     | localDeclaration

   46 localDeclaration: dataType localVariableList ';'

   47 localVariableList: localVariableList ',' VAR
   48                  | VAR

   49 functionBody: statementList

   50 mainFunction: INT MAIN '(' ')' '{' localDeclarationBlock statementList '}'

   51 statementList: statementList statement ';'
   52              | statement ';'

   53 statement: inputStatement
   54          | outputStatement
   55          | assignmentStatement
   56          | ifStatement
   57          | whileStatement
   58          | jumpStatement
   59          | functionCallStatement
   60          | returnStatement
   61          | allocStatement
   62          | deAllocStatement

   63 inputStatement: READ '(' expression ')'

   64 outputStatement: WRITE '(' expression ')'

   65 allocStatement: expression EQUALS ALLOC '(' ')'

   66 deAllocStatement: DEALLOC '(' expression ')'

   67 assignmentStatement: expression EQUALS expression

   68 ifStatement: IF '(' expression ')' THEN statementList ELSE statementList ENDIF
   69            | IF '(' expression ')' THEN statementList ENDIF

   70 whileStatement: WHILE '(' expression ')' DO statementList ENDWHILE
   71               | DO statementList WHILE '(' expression ')' ENDWHILE
   72               | REPEAT statementList UNTIL '(' expression ')'

   73 jumpStatement: CONTINUE
   74              | BREAK

   75 functionCallStatement: VAR '(' argList ')'

   76 returnStatement: RETURN expression

   77 expression: '(' expression ')'
   78           | VAR '(' argList ')'
   79           | arithmeticExpression
   80           | logicalExpression
   81           | constant
   82           | variable

   83 arithmeticExpression: expression ADD expression
   84                     | expression SUB expression
   85                     | expression MUL expression
   86                     | expression DIV expression

   87 logicalExpression: expression SLT expression
   88                  | expression SGT expression
   89                  | expression LTE expression
   90                  | expression GTE expression
   91                  | expression NEQ expression
   92                  | expression EQU expression

   93 constant: NUM
   94         | STRING

   95 variable: VAR '[' expression ']'
   96         | VAR
   97         | field

   98 field: VAR '.' field
   99      | VAR '.' VAR

  100 argList: argList ',' expression
  101        | expression
  102        | %empty


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 27 30 34 50 63 64 65 66 68 69 70 71 72 75 77 78
    ')' (41) 27 30 34 50 63 64 65 66 68 69 70 71 72 75 77 78
    ',' (44) 25 26 27 38 47 100
    '.' (46) 98 99
    ';' (59) 11 14 21 46 51 52
    '[' (91) 26 29 95
    ']' (93) 26 29 95
    '{' (123) 11 34 50
    '}' (125) 11 34 50
    error (256)
    START (258)
    END (259)
    DECL (260) 18 42
    ENDDECL (261) 18 42
    IF (262) 68 69
    THEN (263) 68 69
    ELSE (264) 68
    ENDIF (265) 68 69
    WHILE (266) 70 71
    DO (267) 70 71
    ENDWHILE (268) 70 71
    READ (269) 63
    WRITE (270) 64
    CONTINUE (271) 73
    BREAK (272) 74
    REPEAT (273) 72
    UNTIL (274) 72
    MAIN (275) 50
    ARGS (276)
    RETURN (277) 76
    ALLOC (278) 65
    DEALLOC (279) 66
    INT (280) 15 22 35 50
    STR (281) 16 23 36
    TYPE (282) 6 8
    ENDTYPE (283) 6 8
    NUM (284) 26 29 93
    VAR (285) 11 14 17 24 25 26 27 28 29 30 34 37 41 47 48 75 78 95 96 98 99
    ADD (286) 83
    SUB (287) 84
    MUL (288) 85
    DIV (289) 86
    EQUALS (290) 65 67
    SLT (291) 87
    SGT (292) 88
    LTE (293) 89
    GTE (294) 90
    NEQ (295) 91
    EQU (296) 92
    STRING (297) 94
    ARR_INDEX (298)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    code (54)
        on left: 1 2 3 4
        on right: 0
    typedefSection <node> (55)
        on left: 6 8
        on right: 1
    $@1 (56)
        on left: 5
        on right: 6
    $@2 (57)
        on left: 7
        on right: 8
    typedefList <node> (58)
        on left: 9 10
        on right: 6 9
    typeDefinition <node> (59)
        on left: 11
        on right: 9 10
    fieldList <fieldnode> (60)
        on left: 12 13
        on right: 11 12
    fieldDeclaration <fieldnode> (61)
        on left: 14
        on right: 12 13
    fieldType <typenode> (62)
        on left: 15 16 17
        on right: 14
    globalDeclarations <node> (63)
        on left: 18
        on right: 1 2 3
    declarationList <node> (64)
        on left: 19 20
        on right: 18 19
    declaration <node> (65)
        on left: 21
        on right: 19 20
    dataType <typenode> (66)
        on left: 22 23 24
        on right: 21 41 46
    variableList <node> (67)
        on left: 25 26 27 28 29 30
        on right: 21 25 26 27
    functionDefinitionList <node> (68)
        on left: 31 32
        on right: 1 2 31
    functionDefinition <node> (69)
        on left: 34
        on right: 31 32
    $@3 (70)
        on left: 33
        on right: 34
    returnType <typenode> (71)
        on left: 35 36 37
        on right: 34
    parameterList <fparams> (72)
        on left: 38 39 40
        on right: 27 30 34 38
    parameter <fparams> (73)
        on left: 41
        on right: 38 39
    localDeclarationBlock <node> (74)
        on left: 42 43
        on right: 34 50
    localDeclarationList <node> (75)
        on left: 44 45
        on right: 42 44
    localDeclaration <node> (76)
        on left: 46
        on right: 44 45
    localVariableList <node> (77)
        on left: 47 48
        on right: 46 47
    functionBody <node> (78)
        on left: 49
        on right: 34
    mainFunction <node> (79)
        on left: 50
        on right: 1 2 3 4
    statementList <node> (80)
        on left: 51 52
        on right: 49 50 51 68 69 70 71 72
    statement <node> (81)
        on left: 53 54 55 56 57 58 59 60 61 62
        on right: 51 52
    inputStatement <node> (82)
        on left: 63
        on right: 53
    outputStatement <node> (83)
        on left: 64
        on right: 54
    allocStatement <node> (84)
        on left: 65
        on right: 61
    deAllocStatement <node> (85)
        on left: 66
        on right: 62
    assignmentStatement <node> (86)
        on left: 67
        on right: 55
    ifStatement <node> (87)
        on left: 68 69
        on right: 56
    whileStatement <node> (88)
        on left: 70 71 72
        on right: 57
    jumpStatement <node> (89)
        on left: 73 74
        on right: 58
    functionCallStatement <node> (90)
        on left: 75
        on right: 59
    returnStatement <node> (91)
        on left: 76
        on right: 60
    expression <node> (92)
        on left: 77 78 79 80 81 82
        on right: 63 64 65 66 67 68 69 70 71 72 76 77 83 84 85 86 87 88 89 90 91 92 95 100 101
    arithmeticExpression <node> (93)
        on left: 83 84 85 86
        on right: 79
    logicalExpression <node> (94)
        on left: 87 88 89 90 91 92
        on right: 80
    constant <node> (95)
        on left: 93 94
        on right: 81
    variable <node> (96)
        on left: 95 96 97
        on right: 82
    field <fieldnode> (97)
        on left: 98 99
        on right: 97 98
    argList <node> (98)
        on left: 100 101 102
        on right: 75 78 100


State 0

    0 $accept: . code $end

    DECL  shift, and go to state 1
    INT   shift, and go to state 2
    TYPE  shift, and go to state 3

    code                go to state 4
    typedefSection      go to state 5
    globalDeclarations  go to state 6
    mainFunction        go to state 7


State 1

   18 globalDeclarations: DECL . declarationList ENDDECL

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    VAR  shift, and go to state 10

    declarationList  go to state 11
    declaration      go to state 12
    dataType         go to state 13


State 2

   50 mainFunction: INT . MAIN '(' ')' '{' localDeclarationBlock statementList '}'

    MAIN  shift, and go to state 14


State 3

    6 typedefSection: TYPE . $@1 typedefList ENDTYPE
    8               | TYPE . $@2 ENDTYPE

    ENDTYPE   reduce using rule 7 ($@2)
    $default  reduce using rule 5 ($@1)

    $@1  go to state 15
    $@2  go to state 16


State 4

    0 $accept: code . $end

    $end  shift, and go to state 17


State 5

    1 code: typedefSection . globalDeclarations functionDefinitionList mainFunction

    DECL  shift, and go to state 1

    globalDeclarations  go to state 18


State 6

    2 code: globalDeclarations . functionDefinitionList mainFunction
    3     | globalDeclarations . mainFunction

    INT  shift, and go to state 19
    STR  shift, and go to state 20
    VAR  shift, and go to state 21

    functionDefinitionList  go to state 22
    functionDefinition      go to state 23
    returnType              go to state 24
    mainFunction            go to state 25


State 7

    4 code: mainFunction .

    $default  reduce using rule 4 (code)


State 8

   22 dataType: INT .

    $default  reduce using rule 22 (dataType)


State 9

   23 dataType: STR .

    $default  reduce using rule 23 (dataType)


State 10

   24 dataType: VAR .

    $default  reduce using rule 24 (dataType)


State 11

   18 globalDeclarations: DECL declarationList . ENDDECL
   19 declarationList: declarationList . declaration

    ENDDECL  shift, and go to state 26
    INT      shift, and go to state 8
    STR      shift, and go to state 9
    VAR      shift, and go to state 10

    declaration  go to state 27
    dataType     go to state 13


State 12

   20 declarationList: declaration .

    $default  reduce using rule 20 (declarationList)


State 13

   21 declaration: dataType . variableList ';'

    VAR  shift, and go to state 28

    variableList  go to state 29


State 14

   50 mainFunction: INT MAIN . '(' ')' '{' localDeclarationBlock statementList '}'

    '('  shift, and go to state 30


State 15

    6 typedefSection: TYPE $@1 . typedefList ENDTYPE

    VAR  shift, and go to state 31

    typedefList     go to state 32
    typeDefinition  go to state 33


State 16

    8 typedefSection: TYPE $@2 . ENDTYPE

    ENDTYPE  shift, and go to state 34


State 17

    0 $accept: code $end .

    $default  accept


State 18

    1 code: typedefSection globalDeclarations . functionDefinitionList mainFunction

    INT  shift, and go to state 35
    STR  shift, and go to state 20
    VAR  shift, and go to state 21

    functionDefinitionList  go to state 36
    functionDefinition      go to state 23
    returnType              go to state 24


State 19

   35 returnType: INT .
   50 mainFunction: INT . MAIN '(' ')' '{' localDeclarationBlock statementList '}'

    MAIN  shift, and go to state 14

    $default  reduce using rule 35 (returnType)


State 20

   36 returnType: STR .

    $default  reduce using rule 36 (returnType)


State 21

   37 returnType: VAR .

    $default  reduce using rule 37 (returnType)


State 22

    2 code: globalDeclarations functionDefinitionList . mainFunction
   31 functionDefinitionList: functionDefinitionList . functionDefinition

    INT  shift, and go to state 19
    STR  shift, and go to state 20
    VAR  shift, and go to state 21

    functionDefinition  go to state 37
    returnType          go to state 24
    mainFunction        go to state 38


State 23

   32 functionDefinitionList: functionDefinition .

    $default  reduce using rule 32 (functionDefinitionList)


State 24

   34 functionDefinition: returnType . VAR '(' parameterList ')' '{' localDeclarationBlock $@3 functionBody '}'

    VAR  shift, and go to state 39


State 25

    3 code: globalDeclarations mainFunction .

    $default  reduce using rule 3 (code)


State 26

   18 globalDeclarations: DECL declarationList ENDDECL .

    $default  reduce using rule 18 (globalDeclarations)


State 27

   19 declarationList: declarationList declaration .

    $default  reduce using rule 19 (declarationList)


State 28

   28 variableList: VAR .
   29             | VAR . '[' NUM ']'
   30             | VAR . '(' parameterList ')'

    '['  shift, and go to state 40
    '('  shift, and go to state 41

    $default  reduce using rule 28 (variableList)


State 29

   21 declaration: dataType variableList . ';'
   25 variableList: variableList . ',' VAR
   26             | variableList . ',' VAR '[' NUM ']'
   27             | variableList . ',' VAR '(' parameterList ')'

    ';'  shift, and go to state 42
    ','  shift, and go to state 43


State 30

   50 mainFunction: INT MAIN '(' . ')' '{' localDeclarationBlock statementList '}'

    ')'  shift, and go to state 44


State 31

   11 typeDefinition: VAR . '{' fieldList '}' ';'

    '{'  shift, and go to state 45


State 32

    6 typedefSection: TYPE $@1 typedefList . ENDTYPE
    9 typedefList: typedefList . typeDefinition

    ENDTYPE  shift, and go to state 46
    VAR      shift, and go to state 31

    typeDefinition  go to state 47


State 33

   10 typedefList: typeDefinition .

    $default  reduce using rule 10 (typedefList)


State 34

    8 typedefSection: TYPE $@2 ENDTYPE .

    $default  reduce using rule 8 (typedefSection)


State 35

   35 returnType: INT .

    $default  reduce using rule 35 (returnType)


State 36

    1 code: typedefSection globalDeclarations functionDefinitionList . mainFunction
   31 functionDefinitionList: functionDefinitionList . functionDefinition

    INT  shift, and go to state 19
    STR  shift, and go to state 20
    VAR  shift, and go to state 21

    functionDefinition  go to state 37
    returnType          go to state 24
    mainFunction        go to state 48


State 37

   31 functionDefinitionList: functionDefinitionList functionDefinition .

    $default  reduce using rule 31 (functionDefinitionList)


State 38

    2 code: globalDeclarations functionDefinitionList mainFunction .

    $default  reduce using rule 2 (code)


State 39

   34 functionDefinition: returnType VAR . '(' parameterList ')' '{' localDeclarationBlock $@3 functionBody '}'

    '('  shift, and go to state 49


State 40

   29 variableList: VAR '[' . NUM ']'

    NUM  shift, and go to state 50


State 41

   30 variableList: VAR '(' . parameterList ')'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    VAR  shift, and go to state 10

    $default  reduce using rule 40 (parameterList)

    dataType       go to state 51
    parameterList  go to state 52
    parameter      go to state 53


State 42

   21 declaration: dataType variableList ';' .

    $default  reduce using rule 21 (declaration)


State 43

   25 variableList: variableList ',' . VAR
   26             | variableList ',' . VAR '[' NUM ']'
   27             | variableList ',' . VAR '(' parameterList ')'

    VAR  shift, and go to state 54


State 44

   50 mainFunction: INT MAIN '(' ')' . '{' localDeclarationBlock statementList '}'

    '{'  shift, and go to state 55


State 45

   11 typeDefinition: VAR '{' . fieldList '}' ';'

    INT  shift, and go to state 56
    STR  shift, and go to state 57
    VAR  shift, and go to state 58

    fieldList         go to state 59
    fieldDeclaration  go to state 60
    fieldType         go to state 61


State 46

    6 typedefSection: TYPE $@1 typedefList ENDTYPE .

    $default  reduce using rule 6 (typedefSection)


State 47

    9 typedefList: typedefList typeDefinition .

    $default  reduce using rule 9 (typedefList)


State 48

    1 code: typedefSection globalDeclarations functionDefinitionList mainFunction .

    $default  reduce using rule 1 (code)


State 49

   34 functionDefinition: returnType VAR '(' . parameterList ')' '{' localDeclarationBlock $@3 functionBody '}'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    VAR  shift, and go to state 10

    $default  reduce using rule 40 (parameterList)

    dataType       go to state 51
    parameterList  go to state 62
    parameter      go to state 53


State 50

   29 variableList: VAR '[' NUM . ']'

    ']'  shift, and go to state 63


State 51

   41 parameter: dataType . VAR

    VAR  shift, and go to state 64


State 52

   30 variableList: VAR '(' parameterList . ')'
   38 parameterList: parameterList . ',' parameter

    ','  shift, and go to state 65
    ')'  shift, and go to state 66


State 53

   39 parameterList: parameter .

    $default  reduce using rule 39 (parameterList)


State 54

   25 variableList: variableList ',' VAR .
   26             | variableList ',' VAR . '[' NUM ']'
   27             | variableList ',' VAR . '(' parameterList ')'

    '['  shift, and go to state 67
    '('  shift, and go to state 68

    $default  reduce using rule 25 (variableList)


State 55

   50 mainFunction: INT MAIN '(' ')' '{' . localDeclarationBlock statementList '}'

    DECL  shift, and go to state 69

    $default  reduce using rule 43 (localDeclarationBlock)

    localDeclarationBlock  go to state 70


State 56

   15 fieldType: INT .

    $default  reduce using rule 15 (fieldType)


State 57

   16 fieldType: STR .

    $default  reduce using rule 16 (fieldType)


State 58

   17 fieldType: VAR .

    $default  reduce using rule 17 (fieldType)


State 59

   11 typeDefinition: VAR '{' fieldList . '}' ';'
   12 fieldList: fieldList . fieldDeclaration

    INT  shift, and go to state 56
    STR  shift, and go to state 57
    VAR  shift, and go to state 58
    '}'  shift, and go to state 71

    fieldDeclaration  go to state 72
    fieldType         go to state 61


State 60

   13 fieldList: fieldDeclaration .

    $default  reduce using rule 13 (fieldList)


State 61

   14 fieldDeclaration: fieldType . VAR ';'

    VAR  shift, and go to state 73


State 62

   34 functionDefinition: returnType VAR '(' parameterList . ')' '{' localDeclarationBlock $@3 functionBody '}'
   38 parameterList: parameterList . ',' parameter

    ','  shift, and go to state 65
    ')'  shift, and go to state 74


State 63

   29 variableList: VAR '[' NUM ']' .

    $default  reduce using rule 29 (variableList)


State 64

   41 parameter: dataType VAR .

    $default  reduce using rule 41 (parameter)


State 65

   38 parameterList: parameterList ',' . parameter

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    VAR  shift, and go to state 10

    dataType   go to state 51
    parameter  go to state 75


State 66

   30 variableList: VAR '(' parameterList ')' .

    $default  reduce using rule 30 (variableList)


State 67

   26 variableList: variableList ',' VAR '[' . NUM ']'

    NUM  shift, and go to state 76


State 68

   27 variableList: variableList ',' VAR '(' . parameterList ')'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    VAR  shift, and go to state 10

    $default  reduce using rule 40 (parameterList)

    dataType       go to state 51
    parameterList  go to state 77
    parameter      go to state 53


State 69

   42 localDeclarationBlock: DECL . localDeclarationList ENDDECL

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    VAR  shift, and go to state 10

    dataType              go to state 78
    localDeclarationList  go to state 79
    localDeclaration      go to state 80


State 70

   50 mainFunction: INT MAIN '(' ')' '{' localDeclarationBlock . statementList '}'

    IF        shift, and go to state 81
    WHILE     shift, and go to state 82
    DO        shift, and go to state 83
    READ      shift, and go to state 84
    WRITE     shift, and go to state 85
    CONTINUE  shift, and go to state 86
    BREAK     shift, and go to state 87
    REPEAT    shift, and go to state 88
    RETURN    shift, and go to state 89
    DEALLOC   shift, and go to state 90
    NUM       shift, and go to state 91
    VAR       shift, and go to state 92
    STRING    shift, and go to state 93
    '('       shift, and go to state 94

    statementList          go to state 95
    statement              go to state 96
    inputStatement         go to state 97
    outputStatement        go to state 98
    allocStatement         go to state 99
    deAllocStatement       go to state 100
    assignmentStatement    go to state 101
    ifStatement            go to state 102
    whileStatement         go to state 103
    jumpStatement          go to state 104
    functionCallStatement  go to state 105
    returnStatement        go to state 106
    expression             go to state 107
    arithmeticExpression   go to state 108
    logicalExpression      go to state 109
    constant               go to state 110
    variable               go to state 111
    field                  go to state 112


State 71

   11 typeDefinition: VAR '{' fieldList '}' . ';'

    ';'  shift, and go to state 113


State 72

   12 fieldList: fieldList fieldDeclaration .

    $default  reduce using rule 12 (fieldList)


State 73

   14 fieldDeclaration: fieldType VAR . ';'

    ';'  shift, and go to state 114


State 74

   34 functionDefinition: returnType VAR '(' parameterList ')' . '{' localDeclarationBlock $@3 functionBody '}'

    '{'  shift, and go to state 115


State 75

   38 parameterList: parameterList ',' parameter .

    $default  reduce using rule 38 (parameterList)


State 76

   26 variableList: variableList ',' VAR '[' NUM . ']'

    ']'  shift, and go to state 116


State 77

   27 variableList: variableList ',' VAR '(' parameterList . ')'
   38 parameterList: parameterList . ',' parameter

    ','  shift, and go to state 65
    ')'  shift, and go to state 117


State 78

   46 localDeclaration: dataType . localVariableList ';'

    VAR  shift, and go to state 118

    localVariableList  go to state 119


State 79

   42 localDeclarationBlock: DECL localDeclarationList . ENDDECL
   44 localDeclarationList: localDeclarationList . localDeclaration

    ENDDECL  shift, and go to state 120
    INT      shift, and go to state 8
    STR      shift, and go to state 9
    VAR      shift, and go to state 10

    dataType          go to state 78
    localDeclaration  go to state 121


State 80

   45 localDeclarationList: localDeclaration .

    $default  reduce using rule 45 (localDeclarationList)


State 81

   68 ifStatement: IF . '(' expression ')' THEN statementList ELSE statementList ENDIF
   69            | IF . '(' expression ')' THEN statementList ENDIF

    '('  shift, and go to state 122


State 82

   70 whileStatement: WHILE . '(' expression ')' DO statementList ENDWHILE

    '('  shift, and go to state 123


State 83

   71 whileStatement: DO . statementList WHILE '(' expression ')' ENDWHILE

    IF        shift, and go to state 81
    WHILE     shift, and go to state 82
    DO        shift, and go to state 83
    READ      shift, and go to state 84
    WRITE     shift, and go to state 85
    CONTINUE  shift, and go to state 86
    BREAK     shift, and go to state 87
    REPEAT    shift, and go to state 88
    RETURN    shift, and go to state 89
    DEALLOC   shift, and go to state 90
    NUM       shift, and go to state 91
    VAR       shift, and go to state 92
    STRING    shift, and go to state 93
    '('       shift, and go to state 94

    statementList          go to state 124
    statement              go to state 96
    inputStatement         go to state 97
    outputStatement        go to state 98
    allocStatement         go to state 99
    deAllocStatement       go to state 100
    assignmentStatement    go to state 101
    ifStatement            go to state 102
    whileStatement         go to state 103
    jumpStatement          go to state 104
    functionCallStatement  go to state 105
    returnStatement        go to state 106
    expression             go to state 107
    arithmeticExpression   go to state 108
    logicalExpression      go to state 109
    constant               go to state 110
    variable               go to state 111
    field                  go to state 112


State 84

   63 inputStatement: READ . '(' expression ')'

    '('  shift, and go to state 125


State 85

   64 outputStatement: WRITE . '(' expression ')'

    '('  shift, and go to state 126


State 86

   73 jumpStatement: CONTINUE .

    $default  reduce using rule 73 (jumpStatement)


State 87

   74 jumpStatement: BREAK .

    $default  reduce using rule 74 (jumpStatement)


State 88

   72 whileStatement: REPEAT . statementList UNTIL '(' expression ')'

    IF        shift, and go to state 81
    WHILE     shift, and go to state 82
    DO        shift, and go to state 83
    READ      shift, and go to state 84
    WRITE     shift, and go to state 85
    CONTINUE  shift, and go to state 86
    BREAK     shift, and go to state 87
    REPEAT    shift, and go to state 88
    RETURN    shift, and go to state 89
    DEALLOC   shift, and go to state 90
    NUM       shift, and go to state 91
    VAR       shift, and go to state 92
    STRING    shift, and go to state 93
    '('       shift, and go to state 94

    statementList          go to state 127
    statement              go to state 96
    inputStatement         go to state 97
    outputStatement        go to state 98
    allocStatement         go to state 99
    deAllocStatement       go to state 100
    assignmentStatement    go to state 101
    ifStatement            go to state 102
    whileStatement         go to state 103
    jumpStatement          go to state 104
    functionCallStatement  go to state 105
    returnStatement        go to state 106
    expression             go to state 107
    arithmeticExpression   go to state 108
    logicalExpression      go to state 109
    constant               go to state 110
    variable               go to state 111
    field                  go to state 112


State 89

   76 returnStatement: RETURN . expression

    NUM     shift, and go to state 91
    VAR     shift, and go to state 128
    STRING  shift, and go to state 93
    '('     shift, and go to state 94

    expression            go to state 129
    arithmeticExpression  go to state 108
    logicalExpression     go to state 109
    constant              go to state 110
    variable              go to state 111
    field                 go to state 112


State 90

   66 deAllocStatement: DEALLOC . '(' expression ')'

    '('  shift, and go to state 130


State 91

   93 constant: NUM .

    $default  reduce using rule 93 (constant)


State 92

   75 functionCallStatement: VAR . '(' argList ')'
   78 expression: VAR . '(' argList ')'
   95 variable: VAR . '[' expression ']'
   96         | VAR .
   98 field: VAR . '.' field
   99      | VAR . '.' VAR

    '['  shift, and go to state 131
    '('  shift, and go to state 132
    '.'  shift, and go to state 133

    $default  reduce using rule 96 (variable)


State 93

   94 constant: STRING .

    $default  reduce using rule 94 (constant)


State 94

   77 expression: '(' . expression ')'

    NUM     shift, and go to state 91
    VAR     shift, and go to state 128
    STRING  shift, and go to state 93
    '('     shift, and go to state 94

    expression            go to state 134
    arithmeticExpression  go to state 108
    logicalExpression     go to state 109
    constant              go to state 110
    variable              go to state 111
    field                 go to state 112


State 95

   50 mainFunction: INT MAIN '(' ')' '{' localDeclarationBlock statementList . '}'
   51 statementList: statementList . statement ';'

    IF        shift, and go to state 81
    WHILE     shift, and go to state 82
    DO        shift, and go to state 83
    READ      shift, and go to state 84
    WRITE     shift, and go to state 85
    CONTINUE  shift, and go to state 86
    BREAK     shift, and go to state 87
    REPEAT    shift, and go to state 88
    RETURN    shift, and go to state 89
    DEALLOC   shift, and go to state 90
    NUM       shift, and go to state 91
    VAR       shift, and go to state 92
    STRING    shift, and go to state 93
    '}'       shift, and go to state 135
    '('       shift, and go to state 94

    statement              go to state 136
    inputStatement         go to state 97
    outputStatement        go to state 98
    allocStatement         go to state 99
    deAllocStatement       go to state 100
    assignmentStatement    go to state 101
    ifStatement            go to state 102
    whileStatement         go to state 103
    jumpStatement          go to state 104
    functionCallStatement  go to state 105
    returnStatement        go to state 106
    expression             go to state 107
    arithmeticExpression   go to state 108
    logicalExpression      go to state 109
    constant               go to state 110
    variable               go to state 111
    field                  go to state 112


State 96

   52 statementList: statement . ';'

    ';'  shift, and go to state 137


State 97

   53 statement: inputStatement .

    $default  reduce using rule 53 (statement)


State 98

   54 statement: outputStatement .

    $default  reduce using rule 54 (statement)


State 99

   61 statement: allocStatement .

    $default  reduce using rule 61 (statement)


State 100

   62 statement: deAllocStatement .

    $default  reduce using rule 62 (statement)


State 101

   55 statement: assignmentStatement .

    $default  reduce using rule 55 (statement)


State 102

   56 statement: ifStatement .

    $default  reduce using rule 56 (statement)


State 103

   57 statement: whileStatement .

    $default  reduce using rule 57 (statement)


State 104

   58 statement: jumpStatement .

    $default  reduce using rule 58 (statement)


State 105

   59 statement: functionCallStatement .

    $default  reduce using rule 59 (statement)


State 106

   60 statement: returnStatement .

    $default  reduce using rule 60 (statement)


State 107

   65 allocStatement: expression . EQUALS ALLOC '(' ')'
   67 assignmentStatement: expression . EQUALS expression
   83 arithmeticExpression: expression . ADD expression
   84                     | expression . SUB expression
   85                     | expression . MUL expression
   86                     | expression . DIV expression
   87 logicalExpression: expression . SLT expression
   88                  | expression . SGT expression
   89                  | expression . LTE expression
   90                  | expression . GTE expression
   91                  | expression . NEQ expression
   92                  | expression . EQU expression

    ADD     shift, and go to state 138
    SUB     shift, and go to state 139
    MUL     shift, and go to state 140
    DIV     shift, and go to state 141
    EQUALS  shift, and go to state 142
    SLT     shift, and go to state 143
    SGT     shift, and go to state 144
    LTE     shift, and go to state 145
    GTE     shift, and go to state 146
    NEQ     shift, and go to state 147
    EQU     shift, and go to state 148


State 108

   79 expression: arithmeticExpression .

    $default  reduce using rule 79 (expression)


State 109

   80 expression: logicalExpression .

    $default  reduce using rule 80 (expression)


State 110

   81 expression: constant .

    $default  reduce using rule 81 (expression)


State 111

   82 expression: variable .

    $default  reduce using rule 82 (expression)


State 112

   97 variable: field .

    $default  reduce using rule 97 (variable)


State 113

   11 typeDefinition: VAR '{' fieldList '}' ';' .

    $default  reduce using rule 11 (typeDefinition)


State 114

   14 fieldDeclaration: fieldType VAR ';' .

    $default  reduce using rule 14 (fieldDeclaration)


State 115

   34 functionDefinition: returnType VAR '(' parameterList ')' '{' . localDeclarationBlock $@3 functionBody '}'

    DECL  shift, and go to state 69

    $default  reduce using rule 43 (localDeclarationBlock)

    localDeclarationBlock  go to state 149


State 116

   26 variableList: variableList ',' VAR '[' NUM ']' .

    $default  reduce using rule 26 (variableList)


State 117

   27 variableList: variableList ',' VAR '(' parameterList ')' .

    $default  reduce using rule 27 (variableList)


State 118

   48 localVariableList: VAR .

    $default  reduce using rule 48 (localVariableList)


State 119

   46 localDeclaration: dataType localVariableList . ';'
   47 localVariableList: localVariableList . ',' VAR

    ';'  shift, and go to state 150
    ','  shift, and go to state 151


State 120

   42 localDeclarationBlock: DECL localDeclarationList ENDDECL .

    $default  reduce using rule 42 (localDeclarationBlock)


State 121

   44 localDeclarationList: localDeclarationList localDeclaration .

    $default  reduce using rule 44 (localDeclarationList)


State 122

   68 ifStatement: IF '(' . expression ')' THEN statementList ELSE statementList ENDIF
   69            | IF '(' . expression ')' THEN statementList ENDIF

    NUM     shift, and go to state 91
    VAR     shift, and go to state 128
    STRING  shift, and go to state 93
    '('     shift, and go to state 94

    expression            go to state 152
    arithmeticExpression  go to state 108
    logicalExpression     go to state 109
    constant              go to state 110
    variable              go to state 111
    field                 go to state 112


State 123

   70 whileStatement: WHILE '(' . expression ')' DO statementList ENDWHILE

    NUM     shift, and go to state 91
    VAR     shift, and go to state 128
    STRING  shift, and go to state 93
    '('     shift, and go to state 94

    expression            go to state 153
    arithmeticExpression  go to state 108
    logicalExpression     go to state 109
    constant              go to state 110
    variable              go to state 111
    field                 go to state 112


State 124

   51 statementList: statementList . statement ';'
   71 whileStatement: DO statementList . WHILE '(' expression ')' ENDWHILE

    IF        shift, and go to state 81
    WHILE     shift, and go to state 154
    DO        shift, and go to state 83
    READ      shift, and go to state 84
    WRITE     shift, and go to state 85
    CONTINUE  shift, and go to state 86
    BREAK     shift, and go to state 87
    REPEAT    shift, and go to state 88
    RETURN    shift, and go to state 89
    DEALLOC   shift, and go to state 90
    NUM       shift, and go to state 91
    VAR       shift, and go to state 92
    STRING    shift, and go to state 93
    '('       shift, and go to state 94

    statement              go to state 136
    inputStatement         go to state 97
    outputStatement        go to state 98
    allocStatement         go to state 99
    deAllocStatement       go to state 100
    assignmentStatement    go to state 101
    ifStatement            go to state 102
    whileStatement         go to state 103
    jumpStatement          go to state 104
    functionCallStatement  go to state 105
    returnStatement        go to state 106
    expression             go to state 107
    arithmeticExpression   go to state 108
    logicalExpression      go to state 109
    constant               go to state 110
    variable               go to state 111
    field                  go to state 112


State 125

   63 inputStatement: READ '(' . expression ')'

    NUM     shift, and go to state 91
    VAR     shift, and go to state 128
    STRING  shift, and go to state 93
    '('     shift, and go to state 94

    expression            go to state 155
    arithmeticExpression  go to state 108
    logicalExpression     go to state 109
    constant              go to state 110
    variable              go to state 111
    field                 go to state 112


State 126

   64 outputStatement: WRITE '(' . expression ')'

    NUM     shift, and go to state 91
    VAR     shift, and go to state 128
    STRING  shift, and go to state 93
    '('     shift, and go to state 94

    expression            go to state 156
    arithmeticExpression  go to state 108
    logicalExpression     go to state 109
    constant              go to state 110
    variable              go to state 111
    field                 go to state 112


State 127

   51 statementList: statementList . statement ';'
   72 whileStatement: REPEAT statementList . UNTIL '(' expression ')'
